--- a/js/pathfind_sandbox/tsconfig.json
+++ b/js/pathfind_sandbox/tsconfig.json
@@ -11,7 +11,7 @@
     // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     // "sourceMap": true,                     /* Generates corresponding '.map' file. */
-     "outFile": "./build/pathfind_sandbox.js", /* Concatenate and emit output to single file. */
+     "outFile": "./build/pathfinder.js",      /* Concatenate and emit output to single file. */
     //"outDir": "./build",                    /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
@@ -70,18 +70,22 @@
     "./src/draw.ts",    
     "./src/mapcontrol.ts",
 
+    "src/algorithms/astar.ts",        
+
     "./src/entities/maptile.ts",
     
     "./src/constains.ts"
   ],
 
   "exclude": [
-    "./build/pathfind_sandbox.js",
+    "./build/pathfinder.js",
 
     "./src/main.ts",    
     "./src/util.ts",
-    "./src/draw.ts",    
-    "./src/mapcontrol.ts",    
+    "./src/draw.ts",        
+    "./src/mapcontrol.ts",
+
+    "src/algorithms/astar.ts",
     
     "./src/entities/maptile.ts",
 
